src/test/ui/pattern/usefulness/issue-78123-non-exhaustive-reference.rs
enum A {}

fn f(a: &A) {
    match a {} //~ ERROR non-exhaustive patterns: type `&A` is non-empty
}

fn main() {}
